--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elzero</title>
+    <title>Owl</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/elzero.css" />
     <!-- Font Awesome -->
@@ -152,7 +152,7 @@
     </div>
     <div class="spikes"></div>
     <!-- End Articles -->
-    <!-- Start Gallery -->
+   <!-- Start Gallery 
     <div class="gallery" id="gallery">
       <h2 class="main-title">Gallery</h2>
       <div class="container">
@@ -188,8 +188,8 @@
         </div>
       </div>
     </div>
-    <!-- End Gallery -->
-    <!-- Start Features -->
+       End Gallery -->
+    <!-- Start Features 
     <div class="features" id="features">
       <h2 class="main-title">Features</h2>
       <div class="container">
@@ -213,8 +213,8 @@
         </div>
       </div>
     </div>
-    <!-- End Features -->
-    <!-- Start Testimonials -->
+     End Features -->
+    <!-- Start Testimonials 
     <div class="testimonials" id="testimonials">
       <h2 class="main-title">Testimonials</h2>
       <div class="container">
@@ -316,8 +316,8 @@
         </div>
       </div>
     </div>
-    <!-- End Testimonials -->
-    <!-- Start Team -->
+     End Testimonials -->
+    <!-- Start Team 
     <div class="team" id="team">
       <h2 class="main-title">Team Members</h2>
       <div class="container">
@@ -508,8 +508,8 @@
       </div>
     </div>
     <div class="spikes"></div>
-    <!-- End Team -->
-    <!-- Start Services -->
+      End Team -->
+    <!-- Start Services 
     <div class="services" id="services">
       <h2 class="main-title">Services</h2>
       <div class="container">
@@ -557,8 +557,8 @@
         </div>
       </div>
     </div>
-    <!-- End Services -->
-    <!-- Start Skills -->
+    End Services -->
+    <!-- Start Skills 
     <div class="our-skills" id="our-skills">
       <h2 class="main-title">Our Skills</h2>
       <div class="container">
@@ -591,8 +591,8 @@
         </div>
       </div>
     </div>
-    <!-- End Skills -->
-    <!-- Start Work Steps -->
+    End Skills -->
+    <!-- Start Work Steps 
     <div class="work-steps" id="work-steps">
       <h2 class="main-title">How It Works ?</h2>
       <div class="container">
@@ -631,8 +631,8 @@
         </div>
       </div>
     </div>
-    <!-- End Work Steps -->
-    <!-- Start Events -->
+    End Work Steps -->
+    <!-- Start Events 
     <div class="events" id="events">
       <div class="dots dots-up"></div>
       <div class="dots dots-down"></div>
@@ -672,8 +672,8 @@
         </div>
       </div>
     </div>
-    <!-- End Events -->
-    <!-- Start Pricing -->
+     End Events -->
+    <!-- Start Pricing 
     <div class="pricing" id="pricing">
       <div class="dots dots-up"></div>
       <div class="dots dots-down"></div>
@@ -730,8 +730,8 @@
         </div>
       </div>
     </div>
-    <!-- End Pricing -->
-    <!-- Start Videos -->
+     End Pricing -->
+    <!-- Start Videos 
     <div class="videos" id="videos">
       <h2 class="main-title">Top Videos</h2>
       <div class="container">
@@ -758,8 +758,8 @@
         </div>
       </div>
     </div>
-    <!-- End Videos -->
-    <!-- Start Stats -->
+     End Videos -->
+    <!-- Start Stats 
     <div class="stats" id="stats">
       <h2>Our Awesome Stats</h2>
       <div class="container">
@@ -785,8 +785,8 @@
         </div>
       </div>
     </div>
-    <!-- End Stats -->
-    <!-- Start Discount -->
+    End Stats -->
+    <!-- Start Discount
     <div class="discount" id="discount">
       <div class="image">
         <div class="content">
@@ -812,8 +812,8 @@
         </div>
       </div>
     </div>
-    <!-- End Discount -->
-    <!-- Start Footer -->
+     End Discount -->
+    <!-- Start Footer 
     <div class="footer">
       <div class="container">
         <div class="box">
@@ -876,7 +876,7 @@
       </div>
       <p class="copyright">Made With &lt;3 By Elzero</p>
     </div>
-    <!-- End Footer -->
+     End Footer -->
     <script src="js/main.js"></script>
   </body>
 </html>
