--- a/index.html
+++ b/index.html
@@ -94,44 +94,46 @@
         <div class="box">
           <img src="T-shirts/10.jpg" alt="" />
           <div class="content">
-            <h3>Test Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+            <h3>attack on titan</h3>
+            <p>Let's write the names of the giants in the death note ☠️ and get rid of this dialogue order it now</p>
           </div>
           <div class="info">
-            <a href="">Read More</a>
+            <a href="">Make order</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
         <div class="box">
           <img src="T-shirts/11.jpg" alt="" />
           <div class="content">
-            <h3>Test Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+            <h3>attack on titan</h3>
+            <p>Let's write the names of the giants in the death note ☠️ and get rid of this dialogue order it now</p>
           </div>
           <div class="info">
-            <a href="">Read More</a>
+            <a href="">Make order</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
         <div class="box">
           <img src="T-shirts/20.jpg" alt="" />
           <div class="content">
-            <h3>Test Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+            <h3>Dragon-ball</h3>
+            <p>What are you missing, otaku, to keep super saiyan?
+              .. I tell you what are you missing .. This T-shirt with 100% Turkish cotton.</p>
           </div>
           <div class="info">
-            <a href="">Read More</a>
+            <a href="">Make order</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
         <div class="box">
           <img src="T-shirts/31.jpg" alt="" />
           <div class="content">
-            <h3>Test Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+            <h3>Death Note</h3>
+            <p>You know if I can kill you while I'm in my place..
+              Because you will not be able to see the T-shirt and do not buy it.</p>
           </div>
           <div class="info">
-            <a href="">Read More</a>
+            <a href="">Make order</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -139,11 +141,12 @@
         <div class="box">
           <img src="T-shirts/30.jpg" alt="" />
           <div class="content">
-            <h3>Test Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+            <h3>Death Note</h3>
+            <p>You know if I can kill you while I'm in my place..
+              Because you will not be able to see the T-shirt and do not buy it.</p>
           </div>
           <div class="info">
-            <a href="">Read More</a>
+            <a href="">Make order</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
