--- a/pages/Order.html
+++ b/pages/Order.html
@@ -86,6 +86,7 @@
       </div>
     </div>
     <!-- End Landing -->	
-    <!-- page Content --> 	  
+    <!-- page Content -->
+    <div style="text-align: center;font-size:30px">copyright &copy; 2022 Owl</div> 	  
   </body>
 </html>
