--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
             <p>Let's write the names of the giants in the death note ☠️ and get rid of this dialogue order it now</p>
           </div>
           <div class="info">
-            <a href="pages/Order.html">Make order</a>
+          <!--  <a href="pages/Order.html">Make order</a> -->
+            <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">Make order</a>
+            <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">call us now</a>            
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -91,7 +93,9 @@
             <p>Let's write the names of the giants in the death note ☠️ and get rid of this dialogue order it now</p>
           </div>
           <div class="info">
-            <a href="pages/Order.html">Make order</a>
+            <!-- <a href="pages/Order.html">Make order</a> -->
+            <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">Make order</a>
+            <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">call us now</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -103,7 +107,9 @@
               .. I tell you what are you missing .. This T-shirt with 100% Turkish cotton.</p>
           </div>
           <div class="info">
-            <a href="pages/Order.html">Make order</a>
+            <!-- <a href="pages/Order.html">Make order</a> -->
+            <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">Make order</a>
+            <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">call us now</a>            
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -115,7 +121,9 @@
               Because you will not be able to see the T-shirt and do not buy it.</p>
           </div>
           <div class="info">
-            <a href="pages/Order.html">Make order</a>
+            <!-- <a href="pages/Order.html">Make order</a> -->
+            <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">Make order</a>
+            <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">call us now</a>            
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
@@ -128,7 +136,9 @@
               Because you will not be able to see the T-shirt and do not buy it.</p>
           </div>
           <div class="info">
-            <a href="pages/Order.html">Make order</a>
+            <!-- <a href="pages/Order.html">Make order</a> -->
+            <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">Make order</a>
+            <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">call us now</a>            
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>        
@@ -156,12 +166,6 @@
           <div class="img-holder"><img src="imgs/Quality.png" alt="" /></div>
           <h2>Quality</h2>
           <p>Owl T-shirt is made of high quality fabric, which is <span class="price">96% cotton 4% lycra</p>
-          <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button" target="_blanck">More</a>
-        </div>
-        <div class="box passion">
-          <div class="img-holder"><img src="imgs/Shiping.png" alt="" /></div>
-          <h2>shiping</h2>
-          <p>we shipping to any where is Egypt .. cost os shipping is <span class="price"> 40 </span> pound only</p>
           <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button" target="_blanck">More</a>
         </div>
       </div>
