--- a/index.html
+++ b/index.html
@@ -69,10 +69,128 @@
       </a>
     </div>
     <!-- End Landing -->
-    <!-- Start Articles -->
+     <!-- Start Gallery -->
+    <div class="gallery" id="gallery">
+      <h2 class="main-title">T-shirts</h2>
+      <div class="container">
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/1.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/2.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/3.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/4.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/5.jpg" alt="" />
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/6.jpg" alt="6" />
+          </div>
+        </div>
+<!--
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/7.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/8.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/9.png" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/10.JPG" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/11.JPG" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/12.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/13.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/14.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/15.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/16.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/17.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/18.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/19.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/20.jpg" alt="" />
+          </div>
+        </div>
+        <div class="box">
+          <div class="image">
+            <img src="T-shirts/21.jpg" alt="" />
+          </div>
+        </div>
+       
+      </div>
+    </div>
+
+ -->
+    <!-- End Gallery -->
+    <!--    
     <div class="articles" id="T-shirts">
       <h2 class="main-title">T-shirts</h2>
       <div class="container">
+
         <div class="box">
           <img src="T-shirts/10.jpg" alt="" />
           <div class="content">
@@ -80,12 +198,13 @@
             <p>Let's write the names of the giants in the death note ☠️ and get rid of this dialogue order it now</p>
           </div>
           <div class="info">
-          <!--  <a href="pages/Order.html">Make order</a> -->
+          <a href="pages/Order.html">Make order</a> 
             <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">Make order</a>
             <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">call us now</a>            
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
+
         <div class="box">
           <img src="T-shirts/11.jpg" alt="" />
           <div class="content">
@@ -93,12 +212,13 @@
             <p>Let's write the names of the giants in the death note ☠️ and get rid of this dialogue order it now</p>
           </div>
           <div class="info">
-            <!-- <a href="pages/Order.html">Make order</a> -->
+            <a href="pages/Order.html">Make order</a>
             <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">Make order</a>
             <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">call us now</a>
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
+
         <div class="box">
           <img src="T-shirts/20.jpg" alt="" />
           <div class="content">
@@ -107,12 +227,13 @@
               .. I tell you what are you missing .. This T-shirt with 100% Turkish cotton.</p>
           </div>
           <div class="info">
-            <!-- <a href="pages/Order.html">Make order</a> -->
+             <a href="pages/Order.html">Make order</a> 
             <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">Make order</a>
             <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">call us now</a>            
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
         </div>
+
         <div class="box">
           <img src="T-shirts/31.jpg" alt="" />
           <div class="content">
@@ -121,7 +242,7 @@
               Because you will not be able to see the T-shirt and do not buy it.</p>
           </div>
           <div class="info">
-            <!-- <a href="pages/Order.html">Make order</a> -->
+             <a href="pages/Order.html">Make order</a> 
             <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">Make order</a>
             <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">call us now</a>            
             <i class="fas fa-long-arrow-alt-right"></i>
@@ -136,12 +257,14 @@
               Because you will not be able to see the T-shirt and do not buy it.</p>
           </div>
           <div class="info">
-            <!-- <a href="pages/Order.html">Make order</a> -->
+            <a href="pages/Order.html">Make order</a> 
             <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">Make order</a>
             <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button">call us now</a>            
             <i class="fas fa-long-arrow-alt-right"></i>
           </div>
-        </div>        
+        </div>  
+                
+-->
       </div>
     </div>
     <div class="spikes"></div>
@@ -153,13 +276,13 @@
          <div class="box time">
           <div class="img-holder"><img src="imgs/Price.png" alt="" /></div>
           <h2>Price</h2>
-          <p>the price of one T-shirt is <span class="price"> 150 </span> Pound without the cost of shipping..Buy it now..!</p>
+          <p>the price of one T-shirt is <span class="price"> 140 </span> Pound without the cost of shipping..Buy it now..!</p>
           <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button" target="_blanck">More</a>
         </div>    
         <div class="box passion">
           <div class="img-holder"><img src="imgs/Size.png" alt="" /></div>
           <h2>Size</h2>
-          <p> owl have all sizes that is suitable for all we have 4 sizes from<span class="price"> M & L & XL and 2XL</span></p>
+          <p> owl have all sizes that is suitable for all we have 4 sizes from<span class="price"> S & M & L & XL & 2XL and 3XL</span></p>
           <a href="https://m.facebook.com/messages/thread/110338151530585/?entrypoint=web%3Atrigger%3Afb_page_cta_page_primary_button" target="_blanck">More</a>
         </div>           
         <div class="box quality">
@@ -177,7 +300,7 @@
       <div class="container">
         <div class="box">
           <div class="image">
-            <img src="imgs/table.jpg" alt="" />
+            <img src="imgs/table.png" alt="" />
           </div>
         </div>
       </div>
@@ -185,7 +308,7 @@
     <!-- End Gallery -->
     <!-- Start Stats -->
     <div class="stats" id="stats">
-      <h2>Our state</h2>
+      <h2>Our state</h2> 
       <div class="container">
          <div class="box">
           <span class="number" data-goal="135">117</span>
@@ -250,11 +373,11 @@
           </div>
         </div>
         <div class="box footer-gallery">
-          <img src="T-shirts/10.jpg" alt="Attack" />
-          <img src="T-shirts/11.jpg" alt="Attack" />
-          <img src="T-shirts/20.jpg" alt="Dragonball" />
-          <img src="T-shirts/30.jpg" alt="Death-note" />
-          <img src="T-shirts/31.jpg" alt="Death-note" />
+          <img src="T-shirts/1.jpg" alt="Attack" />
+          <img src="T-shirts/2.jpg" alt="Attack" />
+          <img src="T-shirts/3.jpg" alt="Dragonball" />
+          <img src="T-shirts/4.jpg" alt="Death-note" />
+          <img src="T-shirts/5.jpg" alt="Death-note" />
         </div>
       </div>
     </div>
